--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "flot": "flot/flot#v0.8.3",
     "font-awesome": "^4.4.0",
     "jquery": "^2.1.4",
+    "lodash": "^3.10.1",
     "papaparse": "^4.1.2"
   },
   "napa": {
