--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "font-awesome": "^4.4.0",
     "jquery": "^2.1.4",
     "lodash": "^3.10.1",
+    "moment": "^2.10.6",
     "papaparse": "^4.1.2"
   },
   "napa": {
